--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  	<meta charset="utf-8" />
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <style type="text/css">
-    .msg {font-weight: 700; color: rgba(255, 87, 0, 0.64);}
-    </style>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <h2>Bienvenido a <%= title %></h2>
-	<p class="msg">Portal de preguntas y respuestas</p>    
-    <hr>
-    <div id='principal'></div>
-  </body>
-</html>
+<h3><%= title %></h3>
+<p>El portal donde se crean tus propios juegos...</p>
