Add FontAwesome Add Footer Github

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
   	<meta charset="utf-8" />
     <title>Quiz</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
   <body>
 	  <div id="page-wrap">
@@ -23,7 +24,7 @@
 			</span>
 			<span class="footer-mid"></span>
 			<span class="footer-right">
-				<a href="http://es.wikipedia.org/wiki/Quiz">Autor</a>	
+				<a href="https://github.com/mobarrio/miridiax-quiz.git" target="_blank" title="Github"><i class="fa fa-2x fa-github"></i></a>
 			</span>
 		</footer>
 	  </div>
