--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
   	<meta charset="utf-8" />
     <title>Quiz</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
   <body>
 	  <div id="page-wrap">
@@ -13,17 +14,18 @@
 		<nav class="main" id="n1" role="navigation">
 			<span><a href="/">Inicio</a></span>
 			<span><a href="/quizes/preguntas">Preguntas</a></span>
+			<span><a href="/author">Créditos</a></span>
 		</nav>
 		<section class="main" id="s1">
 			<%- body %>
 		</section>
 		<footer class="footer" id="f1">
 			<span class="footer-left">
-				<a href="http://es.wikipedia.org/wiki/Quiz">Que es un Quiz?</a>	
+				<a href="http://es.wikipedia.org/wiki/Quiz" title="Que es un Quiz?"><i class="fa fa-2x fa-info-circle"></i></a>	
 			</span>
 			<span class="footer-mid"></span>
 			<span class="footer-right">
-				<a href="http://es.wikipedia.org/wiki/Quiz">Autor</a>	
+				<a href="https://github.com/mobarrio/miridiax-quiz.git" target="_blank" title="Github"><i class="fa fa-2x fa-github"></i></a>
 			</span>
 		</footer>
 	  </div>
