--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
 		</header>
 		<nav class="main" id="n1" role="navigation">
 			<span><a href="/">Inicio</a></span>
-			<span><a href="/quizes/preguntas">Preguntas</a></span>
+			<span><a href="/quizes/question">Preguntas</a></span>
 			<span><a href="/author">Créditos</a></span>
 		</nav>
 		<section class="main" id="s1">
