--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,3 +1,3 @@
    <div><%= respuesta %></div>
    <br/>
-   <a href="/quizes/question">Intentelo otra vez</a>
+   <a href="/quizes/<%= quiz.id %>">Volver a intentarlo</a>
