Cambios de titulo consulta por buscar

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,6 +1,6 @@
 <form id="frmPreguntasSearch"  action="/quizes" method="GET">
 	<p>
-		<b>Consulta:</b>
+		<b>Pregunta:</b>
 		<input type="text" id="search" name="search" value="" placeholder="Texto a buscar..." />
 		<input type="submit" value="Buscar">
 	</p>
