--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -2,5 +2,5 @@
 	<p><b>Pregunta:</b> <%= quiz.pregunta %></p>
 	<input type="text" id="respuesta" name="respuesta" value="" placeholder="Respuesta" />
 	<input type="submit" value="Enviar">
-	<p><a href="/quizes">Volver a preguntas</a></p>
+	<p><a href="/quizes"><button type="button" class="btn">Volver a preguntas</button></a></p>
 </form>
