--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -2,11 +2,11 @@
 	<p><h1>Añadir la pregunta</h1></p>
 	<hr class="hr-dotted">
 	<p>
-		<label for="preg" class="rem"><%=quiz.pregunta%></label>  
+		<label for="preg" class="rem">Pregunta:</label>  
 		<input type="text" id="preg" name="quiz[pregunta]"  value="" placeholder="Escriba la pregunta" />
 	</p>
 	<p>
-		<label for="resp" class="rem"><%=quiz.respuesta%></label>
+		<label for="resp" class="rem">Respuesta:</label>
 		<input type="text" id="resp" name="quiz[respuesta]" value="" placeholder="Respuesta" />
 	</p>
 	<p>
