Actualizacion de preguntas

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,8 @@
 <div class="author">
 	<p><img class="rounded-2x" alt="" src="http://www.gravatar.com/avatar/1bee2ac3a08751f2079c978902a7d238.png"></p>
 	<p><%= autor %></p>
-	<p><a href="mailto:<%=mail%>" target="_blank"><i class="fa fa-2x fa-envelope"></i></a></p>
 	<p>
+		<a href="mailto:<%=mail%>" target="_blank"><i class="fa fa-2x fa-envelope"></i></a>
 		<a href="https://github.com/mobarrio" target="_blank" title="Github"><i class="fa fa-2x fa-github"></i></a>
 		<a href="https://twitter.com/Mariano_Obarrio"           target="_blank" title="Twitter"><i class="fa fa-2x fa-twitter-square"></i></a>
 		<a href="https://es.linkedin.com/in/mobarrio/"          target="_blank" title="LinkedIn"><i class="fa fa-2x fa-linkedin-square"></i></a>
