--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,2 @@
 <h3><%= title %></h3>
-<p>El portal donde se crean tus propios juegos...</p>
+<p class="subtitulo">El portal donde se crean tus propios juegos...</p>
