--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,7 @@ section {
 	padding: 15px; 
 	text-align: center; 
 }
+.subtitulo {font-style: italic; text-shadow: rgba(0, 0, 0, 0.25) 1px 1px; }
 section h3 { font-size: x-large; }
 section p { padding: 8px; }
 section div { font-weight: 700; font-size: 2rem; }
@@ -52,7 +53,7 @@ footer a { color: #000; }
 .footer-right { width:33.33%; text-align: right; float: right; }
 .footer-mid:before { content: "Tablet Layout"; }
 .author {font-family: 'Open Sans';   line-height: 1.6; color: #000;   font-size: 16px;}
-.rounded-2x { border-radius: 50px !important; }
+.rounded-2x { border-radius: 50px !important; border: 1px solid #625A5A; }
 section div.author p { padding: 0 0 10px 0; }
 section div.author p a { color: #000;}
 
@@ -88,4 +89,7 @@ section div.author p a { color: #000;}
 }
 .rem {font-weight: 700;}
 .btn {min-width: 100px;min-height: 25px;  font-weight: 600; padding-left: 8px; padding-right: 8px;}
+.btn-green {  background-color: rgb(35, 111, 4); color: #FFF;}
+.btn-red { background-color: red; color: #FFF; }
+.btn-2{  min-height: 29px; }
 .hr-dotted {border:none; border-top:1px dotted grey; color:#fff; background-color:#fff; height:1px; width:100%;margin-bottom: 0.5rem;}
