--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,8 +1,8 @@
 <form id="frmPreguntasSearch"  action="/quizes" method="GET">
 	<p>
 		<b>Pregunta:</b>
-		<input type="text" id="search" name="search" value="" placeholder="Texto a buscar..." />
-		<input type="submit" value="Buscar">
+		<input type="text" id="search" name="search" value="" placeholder="Texto a buscar..."  class="btn" />
+		<button type="submit" class="btn btn-2"><i class="fa fa-search"></i></button>
 	</p>
 </form>
 <hr class="hr-dotted">
@@ -11,10 +11,22 @@
 	<a href="/quizes"><button type="button" class="btn">Volver a preguntas</button></a>
 <% }else{ %>
 <table style="margin: 0 auto;">
-<% var i; var maxlist = (quizes.length < 6 ? quizes.length : 6); for ( i=0 ; i < maxlist ; i++){ %>
-<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+<% var i; for ( i=0 ; i < quizes.length ; i++){ %>
+	<tr>
+		<td style="  text-align: right;">
+			<a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
+		</td>
+		<td style="padding-left: 1rem;">
+			<a href="/quizes/<%= quizes[i].id %>/edit" title="Editar la pregunta"><button type="button" class="btn"><i class="fa fa-pencil"></i> Modificar</button></a>
+		</td>
+	</tr>
 <% } %>
+	<tr>
+		<td style="  text-align: right;"></td>
+		<td style="padding-left: 1rem;">
+			<a href="/quizes/new" title="Crear nueva pregunta"><button type="button" class="btn btn-green"><i class="fa fa-plus"></i> Nueva</button></a>
+		</td>
+	</tr>
 </table>
-<p><a href="/quizes/new"><button type="button" class="btn">Crear Pregunta</button></a></p>
 <% } %>
 
