Borrar pregunta en DB.

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -17,12 +17,15 @@
 			<a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
 		</td>
 		<td style="padding-left: 1rem;">
-			<a href="/quizes/<%= quizes[i].id %>/edit" title="Editar la pregunta"><button type="button" class="btn"><i class="fa fa-pencil"></i> Modificar</button></a>
+			<form id="frmDeletePreguntas" action="/quizes/<%= quizes[i].id %>?_method=delete" method="POST">
+				<a href="/quizes/<%= quizes[i].id %>/edit" title="Editar: <%= quizes[i].pregunta %>"><button type="button" class="btn btn-icon"><i class="fa fa-pencil"></i></button></a>
+				<button type="submit" class="btn btn-icon" onclick="return confirm('Se eliminara: <%= quizes[i].pregunta %>')" title="Borrar: <%= quizes[i].pregunta %>"><i class="fa fa-trash"></i></button>
+			</form>
 		</td>
 	</tr>
 <% } %>
 	<tr>
-		<td style="  text-align: right;"></td>
+		<td style="text-align: right;"></td>
 		<td style="padding-left: 1rem;">
 			<a href="/quizes/new" title="Crear nueva pregunta"><button type="button" class="btn btn-green"><i class="fa fa-plus"></i> Nueva</button></a>
 		</td>
