--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -91,5 +91,6 @@ section div.author p a { color: #000;}
 .btn {min-width: 100px;min-height: 25px;  font-weight: 600; padding-left: 8px; padding-right: 8px;}
 .btn-green {  background-color: rgb(35, 111, 4); color: #FFF;}
 .btn-red { background-color: red; color: #FFF; }
+.btn-icon {min-width: 48px;}
 .btn-2{  min-height: 29px; }
 .hr-dotted {border:none; border-top:1px dotted grey; color:#fff; background-color:#fff; height:1px; width:100%;margin-bottom: 0.5rem;}
