--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,8 @@
   	<meta charset="utf-8" />
     <title>Quiz</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel='stylesheet' href='/stylesheets/font-awesome.min.css' />
+    <!-- link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" -->
   </head>
   <body>
 	  <div id="page-wrap">
