--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -1,16 +1,42 @@
 <form id="frmCrearPregunta"  action="/quizes/create" method="POST">
 	<p><h1>Añadir la pregunta</h1></p>
 	<hr class="hr-dotted">
-	<p>
-		<label for="preg" class="rem">Pregunta:</label>  
-		<input type="text" id="preg" name="quiz[pregunta]"  value="" placeholder="Escriba la pregunta"  class="btn" />
-	</p>
-	<p>
-		<label for="resp" class="rem">Respuesta:</label>
-		<input type="text" id="resp" name="quiz[respuesta]" value="" placeholder="Respuesta" class="btn" />
-	</p>
-	<p>
-		<button type="submit" class="btn btn-green"><i class="fa fa-floppy-o"></i> Guardar</button>
-		<a href="/quizes"><button type="button" class="btn btn-red"><i class="fa fa-times"></i>  Cancelar</button></a>
-	</p>
+	<div>
+		<table>
+			<tr>
+				<td style="text-align:right;">
+					<label for="preg" class="rem">Pregunta:</label>  
+				</td>
+				<td style="text-align:left;">
+					<input type="text" id="preg" name="quiz[pregunta]"  value="" placeholder="Escriba la pregunta"  class="btn" />
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align:right;">
+					<label for="resp" class="rem">Respuesta:</label>
+				</td>
+				<td style="text-align:left;">
+					<input type="text" id="resp" name="quiz[respuesta]" value="" placeholder="Respuesta" class="btn" />
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align:right;">
+					<label for="tema" class="rem">Tema:</label>
+				</td>
+				<td style="text-align:left;">
+					<select id="tema" name="quiz[tema]" class="btn">
+					  <option value="otro" selected>Otro</option>
+					  <option value="humanidades">Humanidades</option>
+					  <option value="ocio">Ocio</option>
+					  <option value="ciencia">Ciencia</option>
+					  <option value="tecnologia">Tecnología</option>
+					</select>		
+				</td>
+			</tr>
+		</table>
+		<p>
+			<button type="submit" class="btn btn-green"><i class="fa fa-floppy-o"></i> Guardar</button>
+			<a href="/quizes"><button type="button" class="btn btn-red"><i class="fa fa-times"></i>  Cancelar</button></a>
+		</p>
+	</div>
 </form>
