--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -14,7 +14,7 @@
 <% var i; for ( i=0 ; i < quizes.length ; i++){ %>
 	<tr>
 		<td style="  text-align: right;">
-			<a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a> (<%= quizes[i].tema %>)
+			<a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
 		</td>
 		<td style="padding-left: 1rem;">
 			<form id="frmDeletePreguntas" action="/quizes/<%= quizes[i].id %>?_method=delete" method="POST">
