--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,6 +56,20 @@ footer a { color: #000; }
 .rounded-2x { border-radius: 50px !important; border: 1px solid #625A5A; }
 section div.author p { padding: 0 0 10px 0; }
 section div.author p a { color: #000;}
+.rem {font-weight: 700;font-size: 0.9rem;}
+.btn {min-width: 100px;min-height: 25px;  font-weight: 600; padding-left: 8px; padding-right: 8px;}
+.btn-green {  background-color: rgb(35, 111, 4); color: #FFF;}
+.btn-red { background-color: red; color: #FFF; }
+.btn-icon {min-width: 48px;}
+.btn-2{  min-height: 29px; }
+.hr-dotted {border:none; border-top:1px dotted grey; color:#fff; background-color:#fff; height:1px; width:100%;margin-bottom: 0.5rem;}
+#frmCrearPregunta input { min-width: 170px; }
+#frmCrearPregunta select { min-width: 190px; }
+#frmCrearPregunta table { margin: 0 auto;width: 275px; }
+#frmEditarPregunta input  { min-width: 170px; }
+#frmEditarPregunta select { min-width: 190px; }
+#frmEditarPregunta table  { margin: 0 auto;width: 275px; }
+#frmPreguntasShow span {font-size: 1.5rem;background-color: rgba(255, 0, 0, 0.21);width: 275px;margin: auto;margin-bottom: 1rem;display: block;border-radius: 5px;}
 
 /* Smartphones  */
 @media only screen and (max-width: 480px) { 
@@ -86,17 +100,5 @@ section div.author p a { color: #000;}
   		border-right: 1px solid grey;
 	}
 	footer { clear: both; display: block; }
+	#frmPreguntasShow span {width: 50%;}
 }
-.rem {font-weight: 700;font-size: 0.9rem;}
-.btn {min-width: 100px;min-height: 25px;  font-weight: 600; padding-left: 8px; padding-right: 8px;}
-.btn-green {  background-color: rgb(35, 111, 4); color: #FFF;}
-.btn-red { background-color: red; color: #FFF; }
-.btn-icon {min-width: 48px;}
-.btn-2{  min-height: 29px; }
-.hr-dotted {border:none; border-top:1px dotted grey; color:#fff; background-color:#fff; height:1px; width:100%;margin-bottom: 0.5rem;}
-#frmCrearPregunta input { min-width: 170px; }
-#frmCrearPregunta select { min-width: 190px; }
-#frmCrearPregunta table { margin: 0 auto;width: 275px; }
-#frmEditarPregunta input  { min-width: 170px; }
-#frmEditarPregunta select { min-width: 190px; }
-#frmEditarPregunta table  { margin: 0 auto;width: 275px; }
