--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,3 +1,3 @@
    <div><%= respuesta %></div>
    <br/>
-   <a href="/quizes/<%= quiz.id %>"><button type="button" class="btn">Volver a intentarlo</button></a>
+   <a href="/quizes/<%= quiz.id %>"><button type="button" class="btn"><i class="fa fa-reply"></i> Volver a preguntas</button></a>
