--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,5 +1,5 @@
 <form id="frmEditarPregunta"  action="/quizes/<%=quiz.id%>?_method=put" method="POST">
-	<p><h1>Añadir la pregunta</h1></p>
+	<p><h1>Editar la pregunta</h1></p>
 	<hr class="hr-dotted">
 	<div>
 		<table>
