--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,7 +2,7 @@
 	<p>
 		<b>Pregunta:</b>
 		<input type="text" id="search" name="search" value="" placeholder="Texto a buscar..."  class="btn" />
-		<button type="submit" class="btn btn-2"><i class="fa fa-search"></i></button>
+		<button type="submit" class="btn btn-2 btn-icon"><i class="fa fa-search"></i></button>
 	</p>
 </form>
 <hr class="hr-dotted">
