--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -27,7 +27,7 @@
 	<tr>
 		<td style="text-align: right;"></td>
 		<td style="padding-left: 1rem;">
-			<a href="/quizes/new" title="Crear nueva pregunta"><button type="button" class="btn btn-green"><i class="fa fa-plus"></i> Nueva</button></a>
+			<a href="/quizes/new" title="Crear nueva pregunta"><button type="button" class="btn btn-green"><i class="fa fa-plus"></i> Pregunta</button></a>
 		</td>
 	</tr>
 </table>
