--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -2,5 +2,16 @@
 	<span> <%= quiz.pregunta %></span>
 	<input type="text" id="respuesta" name="respuesta" value="" placeholder="Respuesta" class="btn" />
 	<button type="submit" class="btn btn-icon"><i class="fa fa-paper-plane"></i> Enviar</button>
-	<p><a href="/quizes"><button type="button" class="btn"><i class="fa fa-reply"></i> Volver a preguntas</button></a></p>
+	<p>
+		<a href="/quizes"><button type="button" class="btn"><i class="fa fa-reply"></i> Volver</button></a> 
+		<a href="/quizes/<%= quiz.id %>/comments/new"><button type="button" class="btn btn-green"><i class="fa fa-plus"></i> Comentario</button></a>
+	</p>
 </form>
+
+<p><strong>Comentarios</strong></p>
+<hr class="hr-dotted">
+<div id="listComments">
+<% for(index in quiz.Comments){ %>
+	<span><i class="fa fa-comment-o"></i> <%= quiz.Comments[index].comentario %></span>
+<% } %>
+<div>
