--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,11 @@
   <body>
 	  <div id="page-wrap">
 	  	<header class="main" id="h1">
+	  		<%if(!session.user){%>
+	  			<span class="session-right"><a href="/login"><i class="fa fa-sign-in"></i> Login</a></span>
+	  		<% } else { %>
+	  			<span class="session-right"><strong>Bienvenido:</strong> <%=session.user.username%> ( <a href="/logout"><i class="fa fa-sign-out"></i> Logout</a> )</span>
+	  		<% } %>
 		    <h2>Quiz: El portal de preguntas y respuestas</h2>
 		</header>
 		<nav class="main" id="n1" role="navigation">
