Se crean controles, para que solo los usuarios logueados puedan editar, cear o borrar preguntas y comentarios.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,2 @@
-<h3><%= title %></h3>
+<h3><%= title %> <%=(session.user ? session.user.username : "")%></h3>
 <p class="subtitulo">El portal donde se crean tus propios juegos...</p>
