--- a/views/session/new.ejs
+++ b/views/session/new.ejs
@@ -16,7 +16,7 @@
 					<label for="password" class="rem">Password:</label>
 				</td>
 				<td style="text-align:left;">
-					<input type="password" id="password" name="password" value="" class="btn" />
+					<input type="password" id="password" name="password" value="" placeholder="Contraseña" class="btn" />
 				</td>
 			</tr>
 		</table>
