Moderacion de comentarios

--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -10,10 +10,35 @@
 	</p>
 </form>
 
-<p><strong>Comentarios</strong></p>
-<hr class="hr-dotted">
-<div id="listComments">
-<% for(index in quiz.Comments){ %>
-	<span><i class="fa fa-comment-o"></i> <%= quiz.Comments[index].comentario %></span>
+<% if(quiz.Comments.length >0 ) { %>
+	<p><strong>Comentarios</strong></p>
+	<hr class="hr-dotted">
+	<div id="listComments">
+	<table>
+	<% for(index in quiz.Comments){ %>
+		<tr>
+		<% if(quiz.Comments[index].publicado || session.user) { %>
+		<td style=""><i class="fa fa-comment-o"></i></td>
+		<td style="text-align: left;padding-left: 1rem;width: 85%;">
+			<%= quiz.Comments[index].comentario %>
+		</td>
+		<td style="min-width: 100px;text-align: right;">
+			<% if(!quiz.Comments[index].publicado && session.user) { %>
+				<form id="frmDeleteComentario" action="/quizes/<%= quiz.id %>/comments/<%=quiz.Comments[index].id%>?_method=delete" method="POST">
+					<a href="/quizes/<%= quiz.id %>/comments/<%= quiz.Comments[index].id %>/publish"><button type="button" class="btn btn-icon" title="Publicar Comentario"><i class="fa fa-check"></i></button></a>
+					<button type="submit" class="btn btn-icon" onclick="return confirm('Se eliminara: <%= quiz.Comments[index].comentario %>')" title="Borrar: <%= quiz.Comments[index].comentario %>"><i class="fa fa-trash"></i></button>
+				</form>
+			<% } else { %>
+				<% if(session.user) { %>
+				<form id="frmDeleteComentario" action="/quizes/<%= quiz.id %>/comments/<%=quiz.Comments[index].id%>?_method=delete" method="POST">
+					<button type="submit" class="btn btn-icon" onclick="return confirm('Se eliminara: <%= quiz.Comments[index].comentario %>')" title="Borrar: <%= quiz.Comments[index].comentario %>"><i class="fa fa-trash"></i></button>
+				</form>
+				<% } %>
+			<% } %>
+		</td>
+		<% } %>
+		</tr>
+	<% } %>
+	</table>
+	<div>
 <% } %>
-<div>
